syntax = "proto2";

package proto.bolt;

import "loss.proto";
import "ops.proto";

message Placeholder {
  required string name = 1;
  required uint64 dim = 2;
}

message Computation {
  required  string name = 1;
  required  string op = 2;
  repeated string inputs = 3;
}

message ModelMetadata {
  required uint64 train_steps = 1;
  required uint64 total_training_samples = 2;
  required string uuid = 3;
}

message Model {
  repeated Op ops = 1;
  repeated Placeholder inputs = 2;
  repeated Placeholder labels = 3;
  repeated Computation computation_graph = 4;
  repeated Loss losses = 5;
  repeated string outputs = 6;

  required ModelMetadata metadata = 7;
}